# WhisperHotkeyTyper-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
